# bilara-data

./: .gitignore  .pre-commit-config.yaml  README-de.md  README.md  _author.json  _category.json  _edition.json  _language.json  _project-v2.json  _project.json  _publication-v2.json  _publication.json  integrity_check.py
.scripts/: .python-version  .~lock.an10.29.ods#  .~lock.an4.26.ods#  .~lock.an4.98.ods#  .~lock.an4.ods#  .~lock.iti.ods#  .~lock.iti108.ods#  .~lock.pli-tv-bi-vb-np6.ods#  .~lock.pli-tv-bi-vb-sk1-75.ods#  .~lock.pli-tv-bu-pm.ods#  .~lock.pli-tv-bu-vb-pj1.ods#  .~lock.pli-tv-bu-vb-pj4.ods#  .~lock.pli-tv-bu-vb-sk9.ods#  .~lock.pli-tv-bu-vb-ss13.ods#  .~lock.pli-tv-kd1.ods#  .~lock.pli-tv-kd11.ods#  .~lock.pli-tv-kd12.ods#  .~lock.pli-tv-kd14.ods#  .~lock.pli-tv-kd15.ods#  .~lock.pli-tv-kd18.ods#  .~lock.pli-tv-kd19.ods#  .~lock.sn14.10.ods#  .~lock.sn14.29.ods#  .~lock.sn24.18.ods#  .~lock.sn26.1.ods#  .~lock.sn35.232.ods#  .~lock.snp1.2.ods#  .~lock.snp1.5.ods#  .~lock.snp1.9.ods#  .~lock.snp5.2.ods#  .~lock.snp5.3.ods#  .~lock.snp5.4.ods#  .~lock.snp5.5.ods#  .~lock.snp5.6.ods#  .~lock.snp5.7.ods#  .~lock.snp5.8.ods#  .~lock.thag16.6.ods#  .~lock.ud5.5.ods#  .~lock.ud8.10.ods#  all_pali_concordance.json  (+85 more)
.scripts/bilara-html-tsv/: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json
.scripts/bilara-html-tsv/scripts/: html-tsv
.scripts/bilara-io/: .gitignore  common.py  get_data.py  sheet_export.py  sheet_import.py
.scripts/bilara-io/config/: sf.json
.scripts/working/: align.py  test_align.py  wrangler.py  wrangler2.py
(+68862 files in other folders)
